# backend/docs/swagger.json
@@ -159,10 +159,12 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "default": "email@example.com"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "default": "password"
                 }
             }
         },
@@ -171,17 +173,25 @@
             "required": [
                 "email",
                 "password",
-                "password_confirmation"
+                "password_confirmation",
+                "username"
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "default": "email@example.com"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "default": "password"
                 },
                 "password_confirmation": {
-                    "type": "string"
+                    "type": "string",
+                    "default": "password"
+                },
+                "username": {
+                    "type": "string",
+                    "default": "username"
                 }
             }
         },
@@ -193,6 +203,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         }
