# backend/models/user.go
@@ -7,6 +7,7 @@ import (
 
 type User struct {
 	gorm.Model
+	Username string
 	Email    string `gorm:"unique"`
 	Password string `gorm:"size:255"`
 }
